# SoftEtherVPN

./: .clang-format  .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  README.md  configure  readme.md
artifact/: se-vpncmd_1.1_amd64.deb  se-vpnserver_1.1_amd64.deb  softether-vpncmd_4.23.9647_amd64.deb  softether-vpnserver_4.23.9647_amd64.deb
builder/: Dockerfile  main.go
debian/: changelog  control  debhelper-build-stamp  rules  se-vpncmd.install  se-vpnserver.init  se-vpnserver.install  se-vpnserver.service
src/Cedar/: IPsec.c  IPsec.h  IPsec_IKE.c  IPsec_IKE.h  IPsec_IKEv2.c  IPsec_IKEv2.h  IPsec_IkePacket.c  IPsec_IkePacket.h  IPsec_Ikev2Packet.c  IPsec_Ikev2Packet.h  IPsec_L2TP.c  Interop_OpenVPN.c  Virtual.c
src/Mayaqua/: Encrypt.h  Network.c  Str.c  TcpIp.c
src/conf/: mac.mobileconfig
src/hamcorebuilder/: hamcore.se2
src/makefiles/: builder.mk  l64.mak  linux_64bit.mak
