cmake_minimum_required(VERSION 3.9)

project(vpn-ike2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(
  src/
  src/BuildFiles/
  src/BuildUtil/
  src/Cedar/
  src/Ham/
  src/hamcorebuilder/
  src/makefiles/
  src/Mayaqua/
  src/Neo/
  src/Neo6/
  src/PenCore/
  src/See/
  src/SeeDll/
  src/SeLow/
  src/VGate/
  src/vpn16/
  src/vpnbrand/
  src/vpnbridge/
  src/vpnclient/
  src/vpncmd/
  src/vpncmdsys/
  src/vpncmgr/
  src/vpndrvinst/
  src/vpninstall/
  src/vpnserver/
  src/vpnsetup/
  src/vpnsmgr/
  src/vpnweb/
  src/Wfp/
  /usr/local/opt/openssl/include
  /usr/include/openssl)

add_executable(ike
        src/Cedar/winpcap/bittypes.h
        src/Cedar/winpcap/bucket_lookup.h
        src/Cedar/winpcap/count_packets.h
        src/Cedar/winpcap/Devioctl.h
        src/Cedar/winpcap/Gnuc.h
        src/Cedar/winpcap/ip6_misc.h
        src/Cedar/winpcap/memory_t.h
        src/Cedar/winpcap/normal_lookup.h
        src/Cedar/winpcap/Ntddndis.h
        src/Cedar/winpcap/Ntddpack.h
        src/Cedar/winpcap/Packet32.h
        src/Cedar/winpcap/pcap-bpf.h
        src/Cedar/winpcap/pcap-int.h
        src/Cedar/winpcap/pcap-stdinc.h
        src/Cedar/winpcap/pcap.h
        src/Cedar/winpcap/pthread.h
        src/Cedar/winpcap/remote-ext.h
        src/Cedar/winpcap/sched.h
        src/Cedar/winpcap/semaphore.h
        src/Cedar/winpcap/tcp_session.h
        src/Cedar/winpcap/time_calls.h
        src/Cedar/winpcap/tme.h
        src/Cedar/winpcap/Win32-Extensions.h
        src/Cedar/Account.c
        src/Cedar/Account.h
        src/Cedar/Admin.c
        src/Cedar/Admin.h
        src/Cedar/AzureClient.c
        src/Cedar/AzureClient.h
        src/Cedar/AzureServer.c
        src/Cedar/AzureServer.h
        src/Cedar/Bridge.c
        src/Cedar/Bridge.h
        src/Cedar/BridgeUnix.c
        src/Cedar/BridgeUnix.h
        src/Cedar/BridgeWin32.c
        src/Cedar/BridgeWin32.h
        src/Cedar/Cedar.c
        src/Cedar/Cedar.h
        src/Cedar/CedarPch.c
        src/Cedar/CedarPch.h
        src/Cedar/CedarType.h
        src/Cedar/Client.c
        src/Cedar/Client.h
        src/Cedar/CM.c
        src/Cedar/CM.h
        src/Cedar/CMInner.h
        src/Cedar/Command.c
        src/Cedar/Command.h
        src/Cedar/Connection.c
        src/Cedar/Connection.h
        src/Cedar/Console.c
        src/Cedar/Console.h
        src/Cedar/Database.c
        src/Cedar/Database.h
        src/Cedar/DDNS.c
        src/Cedar/DDNS.h
        src/Cedar/EM.c
        src/Cedar/EM.h
        src/Cedar/EMInner.h
        src/Cedar/EtherLog.c
        src/Cedar/EtherLog.h
        src/Cedar/Hub.c
        src/Cedar/Hub.h
        src/Cedar/Interop_OpenVPN.c
        src/Cedar/Interop_OpenVPN.h
        src/Cedar/Interop_SSTP.c
        src/Cedar/Interop_SSTP.h
        src/Cedar/IPsec.c
        src/Cedar/IPsec.h
        src/Cedar/IPsec_EtherIP.c
        src/Cedar/IPsec_EtherIP.h
        src/Cedar/IPsec_IKE.c
        src/Cedar/IPsec_IKE.h
        src/Cedar/IPsec_IkePacket.c
        src/Cedar/IPsec_IkePacket.h
        src/Cedar/IPsec_IKEv2.c
        src/Cedar/IPsec_IKEv2.h
        src/Cedar/IPsec_Ikev2Packet.c
        src/Cedar/IPsec_Ikev2Packet.h
        src/Cedar/IPsec_IPC.c
        src/Cedar/IPsec_IPC.h
        src/Cedar/IPsec_L2TP.c
        src/Cedar/IPsec_L2TP.h
        src/Cedar/IPsec_PPP.c
        src/Cedar/IPsec_PPP.h
        src/Cedar/IPsec_Win7.c
        src/Cedar/IPsec_Win7.h
        src/Cedar/IPsec_Win7Inner.h
        src/Cedar/Layer3.c
        src/Cedar/Layer3.h
        src/Cedar/Link.c
        src/Cedar/Link.h
        src/Cedar/Listener.c
        src/Cedar/Listener.h
        src/Cedar/Logging.c
        src/Cedar/Logging.h
        src/Cedar/Nat.c
        src/Cedar/Nat.h
        src/Cedar/NativeStack.c
        src/Cedar/NativeStack.h
        src/Cedar/netcfgn.h
        src/Cedar/netcfgx.h
        src/Cedar/NM.c
        src/Cedar/NM.h
        src/Cedar/NMInner.h
        src/Cedar/NullLan.c
        src/Cedar/NullLan.h
        src/Cedar/Protocol.c
        src/Cedar/Protocol.h
        src/Cedar/Radius.c
        src/Cedar/Radius.h
        src/Cedar/Remote.c
        src/Cedar/Remote.h
        src/Cedar/Sam.c
        src/Cedar/Sam.h
        src/Cedar/SecureInfo.c
        src/Cedar/SecureInfo.h
        src/Cedar/SecureNAT.c
        src/Cedar/SecureNAT.h
        src/Cedar/SeLowUser.c
        src/Cedar/SeLowUser.h
        src/Cedar/Server.c
        src/Cedar/Server.h
        src/Cedar/Session.c
        src/Cedar/Session.h
        src/Cedar/SM.c
        src/Cedar/SM.h
        src/Cedar/SMInner.h
        src/Cedar/SW.c
        src/Cedar/SW.h
        src/Cedar/SWInner.h
        src/Cedar/UdpAccel.c
        src/Cedar/UdpAccel.h
        src/Cedar/UT.c
        src/Cedar/UT.h
        src/Cedar/VG.c
        src/Cedar/VG.h
        src/Cedar/Virtual.c
        src/Cedar/Virtual.h
        src/Cedar/VLan.c
        src/Cedar/VLan.h
        src/Cedar/VLanUnix.c
        src/Cedar/VLanUnix.h
        src/Cedar/VLanWin32.c
        src/Cedar/VLanWin32.h
        src/Cedar/WaterMark.c
        src/Cedar/WaterMark.h
        src/Cedar/WebUI.c
        src/Cedar/WebUI.h
        src/Cedar/Win32Com.cpp
        src/Cedar/Win32Com.h
        src/Cedar/WinJumpList.cpp
        src/Cedar/WinUi.c
        src/Cedar/WinUi.h
        src/Cedar/Wpc.c
        src/Cedar/Wpc.h
        src/Ham/Ham.c
        src/Ham/Ham.h
        src/Ham/Mon.c
        src/Ham/Mon.h
        src/Ham/resource.h
        src/Ham/Scan.c
        src/Ham/Scan.h
        src/hamcorebuilder/hamcorebuilder.c
        src/Mayaqua/intelaes/iaesni.h
        src/Mayaqua/win32_inc/openssl/aes.h
        src/Mayaqua/win32_inc/openssl/asn1.h
        src/Mayaqua/win32_inc/openssl/asn1_mac.h
        src/Mayaqua/win32_inc/openssl/asn1t.h
        src/Mayaqua/win32_inc/openssl/bio.h
        src/Mayaqua/win32_inc/openssl/blowfish.h
        src/Mayaqua/win32_inc/openssl/bn.h
        src/Mayaqua/win32_inc/openssl/buffer.h
        src/Mayaqua/win32_inc/openssl/camellia.h
        src/Mayaqua/win32_inc/openssl/cast.h
        src/Mayaqua/win32_inc/openssl/cmac.h
        src/Mayaqua/win32_inc/openssl/cms.h
        src/Mayaqua/win32_inc/openssl/comp.h
        src/Mayaqua/win32_inc/openssl/conf.h
        src/Mayaqua/win32_inc/openssl/conf_api.h
        src/Mayaqua/win32_inc/openssl/crypto.h
        src/Mayaqua/win32_inc/openssl/des.h
        src/Mayaqua/win32_inc/openssl/des_old.h
        src/Mayaqua/win32_inc/openssl/dh.h
        src/Mayaqua/win32_inc/openssl/dsa.h
        src/Mayaqua/win32_inc/openssl/dso.h
        src/Mayaqua/win32_inc/openssl/dtls1.h
        src/Mayaqua/win32_inc/openssl/e_os2.h
        src/Mayaqua/win32_inc/openssl/ebcdic.h
        src/Mayaqua/win32_inc/openssl/ec.h
        src/Mayaqua/win32_inc/openssl/ecdh.h
        src/Mayaqua/win32_inc/openssl/ecdsa.h
        src/Mayaqua/win32_inc/openssl/engine.h
        src/Mayaqua/win32_inc/openssl/err.h
        src/Mayaqua/win32_inc/openssl/evp.h
        src/Mayaqua/win32_inc/openssl/hmac.h
        src/Mayaqua/win32_inc/openssl/idea.h
        src/Mayaqua/win32_inc/openssl/krb5_asn.h
        src/Mayaqua/win32_inc/openssl/kssl.h
        src/Mayaqua/win32_inc/openssl/lhash.h
        src/Mayaqua/win32_inc/openssl/md4.h
        src/Mayaqua/win32_inc/openssl/md5.h
        src/Mayaqua/win32_inc/openssl/mdc2.h
        src/Mayaqua/win32_inc/openssl/modes.h
        src/Mayaqua/win32_inc/openssl/obj_mac.h
        src/Mayaqua/win32_inc/openssl/objects.h
        src/Mayaqua/win32_inc/openssl/ocsp.h
        src/Mayaqua/win32_inc/openssl/opensslconf.h
        src/Mayaqua/win32_inc/openssl/opensslv.h
        src/Mayaqua/win32_inc/openssl/ossl_typ.h
        src/Mayaqua/win32_inc/openssl/pem.h
        src/Mayaqua/win32_inc/openssl/pem2.h
        src/Mayaqua/win32_inc/openssl/pkcs12.h
        src/Mayaqua/win32_inc/openssl/pkcs7.h
        src/Mayaqua/win32_inc/openssl/pqueue.h
        src/Mayaqua/win32_inc/openssl/rand.h
        src/Mayaqua/win32_inc/openssl/rc2.h
        src/Mayaqua/win32_inc/openssl/rc4.h
        src/Mayaqua/win32_inc/openssl/ripemd.h
        src/Mayaqua/win32_inc/openssl/rsa.h
        src/Mayaqua/win32_inc/openssl/safestack.h
        src/Mayaqua/win32_inc/openssl/seed.h
        src/Mayaqua/win32_inc/openssl/sha.h
        src/Mayaqua/win32_inc/openssl/srp.h
        src/Mayaqua/win32_inc/openssl/srtp.h
        src/Mayaqua/win32_inc/openssl/ssl.h
        src/Mayaqua/win32_inc/openssl/ssl2.h
        src/Mayaqua/win32_inc/openssl/ssl23.h
        src/Mayaqua/win32_inc/openssl/ssl3.h
        src/Mayaqua/win32_inc/openssl/stack.h
        src/Mayaqua/win32_inc/openssl/symhacks.h
        src/Mayaqua/win32_inc/openssl/tls1.h
        src/Mayaqua/win32_inc/openssl/ts.h
        src/Mayaqua/win32_inc/openssl/txt_db.h
        src/Mayaqua/win32_inc/openssl/ui.h
        src/Mayaqua/win32_inc/openssl/ui_compat.h
        src/Mayaqua/win32_inc/openssl/whrlpool.h
        src/Mayaqua/win32_inc/openssl/x509.h
        src/Mayaqua/win32_inc/openssl/x509_vfy.h
        src/Mayaqua/win32_inc/openssl/x509v3.h
        src/Mayaqua/zlib/zconf.h
        src/Mayaqua/zlib/zlib.h
        src/Mayaqua/Cfg.c
        src/Mayaqua/Cfg.h
        src/Mayaqua/cryptoki.h
        src/Mayaqua/Encrypt.c
        src/Mayaqua/Encrypt.h
        src/Mayaqua/FileIO.c
        src/Mayaqua/FileIO.h
        src/Mayaqua/Internat.c
        src/Mayaqua/Internat.h
        src/Mayaqua/Kernel.c
        src/Mayaqua/Kernel.h
        src/Mayaqua/Mayaqua.c
        src/Mayaqua/Mayaqua.h
        src/Mayaqua/MayaType.h
        src/Mayaqua/Memory.c
        src/Mayaqua/Memory.h
        src/Mayaqua/Microsoft.c
        src/Mayaqua/Microsoft.h
        src/Mayaqua/Network.c
        src/Mayaqua/Network.h
        src/Mayaqua/Object.c
        src/Mayaqua/Object.h
        src/Mayaqua/OS.c
        src/Mayaqua/OS.h
        src/Mayaqua/Pack.c
        src/Mayaqua/Pack.h
        src/Mayaqua/pkcs11.h
        src/Mayaqua/pkcs11f.h
        src/Mayaqua/pkcs11t.h
        src/Mayaqua/Secure.c
        src/Mayaqua/Secure.h
        src/Mayaqua/Str.c
        src/Mayaqua/Str.h
        src/Mayaqua/Table.c
        src/Mayaqua/Table.h
        src/Mayaqua/TcpIp.c
        src/Mayaqua/TcpIp.h
        src/Mayaqua/Tick64.c
        src/Mayaqua/Tick64.h
        src/Mayaqua/Tracking.c
        src/Mayaqua/Tracking.h
        src/Mayaqua/TunTap.h
        src/Mayaqua/Unix.c
        src/Mayaqua/Unix.h
        src/Mayaqua/Win32.c
        src/Mayaqua/Win32.h
        src/Neo/NDIS5.c
        src/Neo/NDIS5.h
        src/Neo/Neo.c
        src/Neo/Neo.h
        src/Neo/resource.h
        src/Neo6/NDIS6.c
        src/Neo6/NDIS6.h
        src/Neo6/Neo6.c
        src/Neo6/Neo6.h
        src/Neo6/resource.h
        src/PenCore/PenCore.c
        src/PenCore/resource.h
        src/See/bucket_lookup.c
        src/See/bucket_lookup.h
        src/See/count_packets.c
        src/See/count_packets.h
        src/See/dagc.h
        src/See/DEBUG.H
        src/See/Devioctl.h
        src/See/dump.c
        src/See/functions.c
        src/See/functions.h
        src/See/jitter.c
        src/See/jitter.h
        src/See/memory_t.h
        src/See/normal_lookup.c
        src/See/normal_lookup.h
        src/See/Ntddndis.h
        src/See/Ntddpack.h
        src/See/Openclos.c
        src/See/Packet.c
        src/See/Packet.h
        src/See/Packet32.h
        src/See/Read.c
        src/See/resource.h
        src/See/resource1.h
        src/See/tcp_session.c
        src/See/tcp_session.h
        src/See/time_calls.h
        src/See/tme.c
        src/See/tme.h
        src/See/valid_insns.h
        src/See/win_bpf.h
        src/See/win_bpf_filter.c
        src/See/win_bpf_filter_init.c
        src/See/win_bpf_filter_init.h
        src/See/Write.c
        src/SeeDll/AdInfo.c
        src/SeeDll/dagc.h
        src/SeeDll/Devioctl.h
        src/SeeDll/Ntddndis.h
        src/SeeDll/Ntddpack.h
        src/SeeDll/Packet32.c
        src/SeeDll/Packet32.h
        src/SeeDll/resource.h
        src/SeLow/resource.h
        src/SeLow/SeLow.c
        src/SeLow/SeLow.h
        src/SeLow/SeLowCommon.h
        src/VGate/resource.h
        src/VGate/VGate.c
        src/VGate/VGate.h
        src/VGate/VGateCommon.h
        src/vpn16/Resource.h
        src/vpn16/vpn16.c
        src/vpn16/vpn16.h
        src/vpnbrand/resource.h
        src/vpnbrand/vpnbrand.c
        src/vpnbrand/vpnbrand.h
        src/vpnbridge/resource.h
        src/vpnbridge/vpnbridge.c
        src/vpnclient/resource.h
        src/vpnclient/vpncsvc.c
        src/vpnclient/vpncsvc.h
        src/vpncmd/resource.h
        src/vpncmd/vpncmd.c
        src/vpncmdsys/resource.h
        src/vpncmdsys/vpncmdsys.c
        src/vpncmdsys/vpncmdsys.h
        src/vpncmgr/resource.h
        src/vpncmgr/vpncmgr.c
        src/vpndrvinst/resource.h
        src/vpndrvinst/vpndrvinst.c
        src/vpndrvinst/vpndrvinst.h
        src/vpninstall/resource.h
        src/vpninstall/vpninstall.c
        src/vpninstall/vpninstall.h
        src/vpnserver/resource.h
        src/vpnserver/vpnserver.c
        src/vpnsetup/resource.h
        src/vpnsetup/vpnsetup.c
        src/vpnsmgr/resource.h
        src/vpnsmgr/vpnsmgr.c
        src/vpnweb/dlldata.c
        src/vpnweb/resource.h
        src/vpnweb/stdafx.cpp
        src/vpnweb/stdafx.h
        src/vpnweb/vpnweb.cpp
        src/vpnweb/vpnweb.h
        src/vpnweb/vpnweb_i.c
        src/vpnweb/vpnweb_p.c
        src/vpnweb/VpnWebControl.cpp
        src/vpnweb/VpnWebControl.h
        src/vpnweb/vpnwebdlg.c
        src/vpnweb/vpnwebdlg.h
        src/vpnweb/vpnwebdlg_inner.h
        src/Wfp/resource1.h
        src/Wfp/Wfp.c
        src/Wfp/Wfp.h
        src/Wfp/WfpInner.h
        src/GlobalConst.h)
